--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <div style="margin: auto; width: 800px; text-align: center;">
     <input type="text" ng-model="searchText" placeholder="Search for a movie..." />
     <button ng-click="search(searchText)">Search</button>
-    <p>{{searchText}}</p>
   </div>
-  <ul>
+  <ul
+    style="list-style-type: none; display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center; text-align: center;">
     <li ng-repeat="movie in movies">
       <h2>{{movie.title}}</h2>
-      <p>{{movie.plot}}</p>
+      <!-- <p>{{movie.plot}}</p> -->
+      <img src="{{movie.poster}}" />
     </li>
   </ul>
 </body>
