--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en" ng-app="MovieApp">
 
 <head>
-  <title>TheNetNinja Angular Playlist</title>
+  <title>Movie Search</title>
   <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script src="app/app.js"></script>
 </head>
 
-<body ng-init="searchText='dark'" ng-controller="MovieSearchController">
+<header style="width: fit-content; margin: auto;">
+  <h1>Search for movies</h1>
+</header>
+
+<body ng-controller="MovieSearchController">
   <div style="margin: auto; width: 800px; text-align: center;">
     <input type="text" ng-model="searchText" placeholder="Search for a movie..." />
     <button ng-click="search(searchText)">Search</button>
@@ -17,7 +21,7 @@
   <ul
     style="list-style-type: none; display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center; text-align: center;">
     <li ng-repeat="movie in movies">
-      <h2>{{movie.title}}</h2>
+      <h2 style="width: 10rem; margin: auto; font-size: 1rem;">{{movie.title}}</h2>
       <!-- <p>{{movie.plot}}</p> -->
       <img src="{{movie.poster}}" />
     </li>
